# Wasm-Runtime-Inspektor

./: README.md
wasm-mini/: CMakeLists.txt  CONTRIBUTING.md  README.md
wasm-mini/examples/: test.wasm  test.wat
wasm-mini/src/: main.cpp
